--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 
 <body lang="en">
 
-<!-- <script src="js/index.js" charset="utf-8"></script> -->
+<script src="js/index.js" charset="utf-8"></script>
 </body>
 </html>
